# MyRag

./: .gitignore  CLAUDE.md  DELIVERY_SUMMARY.md  README.md  UV_GUIDE.md  alembic.ini  dev.py  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  test_system.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_api_key_hash.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: admin.py  documents.py  retrieval.py  router.py  tenants.py
app/core/: __init__.py
app/core/chains/: __init__.py  prompts.py  qa_chain.py
app/core/embeddings/: __init__.py  bge_m3.py
app/core/llm/: __init__.py  factory.py  provider.py
app/core/monitoring/: __init__.py  metrics.py
app/core/preprocessing/: __init__.py  chunker.py  cleaner.py  loaders.py  parser.py  pipeline.py  semantic_splitter.py
app/core/ranking/: __init__.py  coarse.py  confidence.py  conflict.py  fine.py
app/core/retrieval/: __init__.py  dense.py  ensemble.py  fusion.py  graph.py  hybrid.py  langchain_retrievers.py  sparse.py
app/core/tenant/: __init__.py  isolation.py
app/db/: __init__.py  elasticsearch.py  milvus.py  neo4j.py  redis.py  session.py
app/models/: __init__.py  base.py  document.py  schemas.py  tenant.py
app/tasks/: __init__.py  admin.py  celery_app.py  documents.py  tenant.py
app/utils/: __init__.py  embeddings.py  exceptions.py  logging.py  security.py
doc/: API_DOCUMENTATION_CN.md  DEVELOPMENT_CN.md  DOCUMENTATION_INDEX_CN.md  FAQ_CN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LANGCHAIN_INTEGRATION.md  PROJECT_SUMMARY.md  SETUP_GUIDE_CN.md
docker/: .env.example  README_CN.md  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: myrag-dashboard.json
docker/grafana/provisioning/dashboards/: default.yml
tests/: test_admin.py  test_chains_qa.py  test_core.py  test_hybrid_retrieval.py  test_integration.py  test_langchain_retrievers.py  test_llm_provider.py  test_preprocessing.py
