[project]
name = "myrag"
version = "1.0.0"
description = "分布式多租户混合检索企业级RAG系统 - Distributed Multi-Tenant Hybrid Retrieval Enterprise RAG System"
readme = "CLAUDE.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "MyRag Team"}]
keywords = ["rag", "retrieval", "enterprise", "multi-tenant", "hybrid-search", "knowledge-graph"]
urls = { Homepage = "https://github.com/myrag/myrag", Repository = "https://github.com/myrag/myrag" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Vector/Search/Graph databases
    "pymilvus>=2.5.0",
    "elasticsearch[async]>=8.17.0",
    "neo4j>=5.28.0",

    # Cache & Task queue
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",

    # Embeddings & Reranking
    "sentence-transformers>=3.4.0",
    "FlagEmbedding>=1.3.0",

    # Document processing
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "Pillow>=11.0.0",

    # LLM
    "httpx>=0.28.0",
    "openai>=1.60.0",

    # Monitoring
    "prometheus-client>=0.21.0",

    # Utilities
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "fakeredis>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
server = "uvicorn app.main:app --reload"
worker = "celery -A app.tasks.celery_app worker --loglevel=info --concurrency=4"
beat = "celery -A app.tasks.celery_app beat --loglevel=info"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=app --cov-report=html --cov-report=term"
test-cov-xml = "pytest tests/ -v --cov=app --cov-report=xml"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy app/"
migrate = "alembic upgrade head"
migrate-revision = "alembic revision --autogenerate -m"
migrate-downgrade = "alembic downgrade -1"
clean-pyc = "find . -type d -name '__pycache__' -exec rm -rf {} \\; 2>/dev/null || true"
clean-test = "find . -type d -name '.pytest_cache' -exec rm -rf {} \\; 2>/dev/null || true"
clean-coverage = "find . -type d -name 'htmlcov' -exec rm -rf {} \\; 2>/dev/null || true"
clean-all = "uv run clean-pyc && uv run clean-test && uv run clean-coverage"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

